<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to BabyNamesApp !</string>
    <string name="app_name">BabyNamesApp</string>
    <string name="origin">Origin</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="common_names">Common Names</string>
    <string name="un_common_names">Uncommon Names</string>
    <string name="names_popular_in_specific_city">Names Popular in a City</string>
    
    <string name="about_title">About BabyNamesApp</string>
    <string name="about_text">Baby Names is the app that lets your beautiful bump choose their
     own name from thousands of baby names or even a short list created by you.</string>
     
     <string name="popular_names">Popular Baby Names by Country</string>
     <string name="popular_names_text">This is Yet to be implemented. In this
     	Activity you will be having the option to view baby names filtered by country</string>
</resources>
