<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal"
	android:background="@color/background" >

	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center" >

		<TextView
			android:text="@string/app_name"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:textSize="24.5sp" />
		
		<Button
			android:id="@+id/about_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_title" />

		<Button
			android:id="@+id/common_names"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/common_names" />
		<Button
			android:id="@+id/un_common_names"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/un_common_names" />
		<Button
			android:id="@+id/names_popular"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/names_popular_in_specific_city" />

	</LinearLayout>
</LinearLayout>